feat: add routerLink and RoterLinkActive

--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,7 +1,6 @@
-<div class="grid">
+<div class="grid">Movie Component
   <app-movie-cover
     *ngFor="let movie of movies | async"
     [movie]="movie"
   ></app-movie-cover>
 </div>
-Movie Component
