--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav>
   <div class="nav-wrapper black">
-    <a class="brand-logo ps-3">Best Movies</a>
+    <a class="brand-logo ps-3" routerLink="/">Best Movies</a>
     <ul class="right hide-on-med-and-down">
-      <li><a>Movies</a></li>
-      <li><a>Categories</a></li>
+      <li><a routerLink="/movies" routerLinkActive="active">Movies</a></li>
+      <li><a routerLink="/categories" routerLinkActive="active">Categories</a></li>
       <li><a>Years</a></li>
     </ul>
   </div>
