--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,8 +1,9 @@
-<div class="grid">
+<div class="grid">Categories Component
   <a
     class="btn-large grey darken-1"
     *ngFor="let category of categories | async"
     >{{ category }}</a
   >
 </div>
+
 
