feat: add years.component and connect to routing

--- a/src/app/pages/categories/categories.component.html
+++ b/src/app/pages/categories/categories.component.html
@@ -1,4 +1,4 @@
-<div class="grid">Categories Component
+<div class="grid">
   <a
     class="btn-large grey darken-1"
     *ngFor="let category of categories | async"
