--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div class="grid">Movie Component
+<div class="grid">
   <app-movie-cover
     *ngFor="let movie of movies | async"
     [movie]="movie"
