--- a/src/app/pages/movies/movie-details/movie-details.component.html
+++ b/src/app/pages/movies/movie-details/movie-details.component.html
@@ -32,5 +32,8 @@
       </tr>
     </tbody>
   </table>
-  <button class="btn black" (click)="goToMovies()">Back</button>
+  <div class="ms-5 d-flex justify-content-center align-items-center">
+    <button class="btn black" (click)="goToMovies()">Back</button>
+    </div>
 </div>
+
