feat: fix button back

--- a/src/app/pages/movies/movie-details/movie-details.component.html
+++ b/src/app/pages/movies/movie-details/movie-details.component.html
@@ -33,7 +33,7 @@
     </tbody>
   </table>
   <div class="ms-5 d-flex justify-content-center align-items-center">
-    <button class="btn black" (click)="goToMovies()">Back</button>
+    <button class="btn black" (click)="backToPreviousPage()">Back</button>
     </div>
 </div>
 
