--- a/src/app/years/years.component.html
+++ b/src/app/years/years.component.html
@@ -2,7 +2,7 @@
     <a
       class="btn-large grey darken-1"
       *ngFor="let year of years | async"
+      [routerLink]="['/year', year]"
       >{{ year }}</a
     >
   </div>
-  
